--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,34 @@
 {
-  "presets": [ "stage-0", "env" ],
+  "presets": [ "react", "stage-0", "env" ],
   "plugins": [
     ["transform-object-rest-spread"],
     ["transform-react-display-name"],
     ["transform-class-properties"]
-  ]
+  ],
+  "env": {
+    "development": {
+      "plugins": [
+        ["transform-object-rest-spread"],
+        ["transform-react-display-name"],
+        ["transform-class-properties"],
+        ["react-transform", {
+          "transforms": [{
+            "transform": "react-transform-hmr",
+            "imports": ["react"],
+            "locals": ["module"]
+          }, {
+            "transform": "react-transform-catch-errors",
+            "imports": ["react", "redbox-react"]
+          }]
+        }]
+      ]
+    },
+    "production": {
+      "plugins": [
+        ["transform-object-rest-spread"],
+        ["transform-react-display-name"],
+        ["transform-class-properties"]
+      ]
+    }
+  }
 }
