--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon -e js index.js"
+    "start-server": "cross-env NODE_ENV=development nodemon -e js index.js",
+    "start-client": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.dev.js --mode development --open --progress"
   },
   "repository": "git@github.com:chrisgreeff/ph-tt.git",
   "author": "Chris Greeff <chris.r.greeff@gmail.com>",
@@ -15,6 +16,8 @@
     "app-module-path": "^2.2.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-display-name": "^6.25.0",
@@ -25,38 +28,35 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.9.1",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "graphql": "^0.13.2",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
     "knex": "^0.14.6",
     "lodash": "^4.17.10",
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
-    "moment": "^2.22.2",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
     "react-transition-group": "^2.3.1",
     "react": "^16.4.1",
     "redbox-react": "^1.6.0",
     "redux-thunk": "^2.3.0",
     "redux": "^4.0.0",
-    "reselect": "^3.0.1"
-  },
-  "devDependencies": {
-    "cross-env": "^5.2.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
+    "reselect": "^3.0.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "stylelint-config-standard": "^18.2.0",
