--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [ "react", "stage-0", "env" ],
+  "presets": [ "react", "es2015", "stage-0", "env" ],
   "plugins": [
     ["transform-object-rest-spread"],
     ["transform-react-display-name"],
