--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start:api": "cross-env NODE_ENV=development nodemon --watch src -e js api.js",
-    "start:app": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.dev.js --mode development --open --progress"
+    "start:app": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.dev.js --mode development --open --progress",
+    "db:setup": "./node_modules/knex/bin/cli.js migrate:latest && ./node_modules/knex/bin/cli.js seed:run"
   },
   "repository": "git@github.com:chrisgreeff/ph-tt.git",
   "author": "Chris Greeff <chris.r.greeff@gmail.com>",
